# larkxr_clientsdk_native_samples

./: README.md
sample_android/: README.md
sample_desktop/: CMakeLists.txt  README.md
sample_desktop/larkxr/include/lark_xr/: xr_client.h  xr_config.h
sample_desktop/larkxr/include/lark_xr/request/: get_enter_appliInfo.h
sample_desktop/larkxr/include/larkxr_4c/: xr_client_4c.h
sample_desktop/larkxr/lib/x64/Debug/: lark_xr.exp
sample_desktop/larkxr/lib/x64/Release/: lark_xr.exp  lark_xr.lib
sample_desktop/src/sample_dx11/: CMakeLists.txt  application.cpp  application.h  main.cpp
